kubernetes/applications/actualbudget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
    app.kubernetes.io/part-of: everlab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: actual-budget

  ports:
    - name: http
      port: 5006
      targetPort: http
      protocol: TCP
