kubernetes/applications/actualbudget/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget
  namespace: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
    app.kubernetes.io/part-of: everlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - actual-budget.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: actual-budget
          port: 5006
          weight: 1
